plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // DTO validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // AWS S3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // Google Cloud Platform Storage (GCP Storage)
    implementation 'org.springframework.cloud:spring-cloud-gcp-starter:1.2.5.RELEASE'
    implementation 'org.springframework.cloud:spring-cloud-gcp-storage:1.2.5.RELEASE'
    // jdbc
    implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.2.4'
    implementation 'mysql:mysql-connector-java:8.0.29'
    //jwt
    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'


}

tasks.named('test') {
    useJUnitPlatform()
}

// 중복 파일 처리 전략 추가
bootJar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ["-Xlint:deprecation", "-Xlint:unchecked"]
}
